@@ -23,7 +23,7 @@ class BHModel : public Model
 		BHModel();
 		
 		void Configure();
-		virtual void Init() {}
+		virtual void Init();
 		virtual void Print() const;
 		virtual TComplex Amp(double t) const;
 		virtual TComplex Prf(double b) const;
