@@ -20,6 +20,16 @@ BHModel::BHModel()
 
 void BHModel::Configure()
 {
+	// set labels
+	fullLabel.variant = ""; shortLabel.variant = "";
+	fullLabel.version = "Phys. Rept. 436 (2006) 71-215"; shortLabel.version = "06";
+	fullLabel.mode = ""; shortLabel.mode = "";
+}
+
+//----------------------------------------------------------------------------------------------------
+
+void BHModel::Init()
+{
 	// parameters from [2]: Table 5, N_g from above Eq. (463), a's and b's from A.1.2
 
 	// common parameters
@@ -86,11 +96,6 @@ void BHModel::Configure()
 	// precompute sigma_odd, Eq. (B12) in [1] - the factor in front of W(b, mu_odd)
 	// plus additional factor (-i) to match the normalization used in chi_without_i
 	sigma_odd = -i * C_odd * Sigma_gg * m0 / cnts->sqrt_s * TComplex::Exp(i * cnts->pi / 4.);
-	
-	// set labels
-	fullLabel.variant = ""; shortLabel.variant = "";
-	fullLabel.version = "Phys. Rept. 436 (2006) 71-215"; shortLabel.version = "06";
-	fullLabel.mode = ""; shortLabel.mode = "";
 }
 
 //----------------------------------------------------------------------------------------------------
