@@ -3,6 +3,8 @@ future release
 		...<mode>,<sqrt(s)>GeV...
 	* minor modification: JenkovszkyModel updated to match with Int. J. Mod. Phys. A26 (2011)
 	* BHModel: updated to match with BLOCK, M. M., Phys. Rept. 436 (2006) 71-215
+	* new model labeling scheme: name:mode (variant) [version]
+	* added s-distribution sampler
 
 release 1.0
 	* first fully operational version
